--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,15 @@
 body {
   background-color: #202020;
   font-size: 16px;
+  color: white;
+}
+button {
+  background-color: #e08594;
+  border: none;
+  outline: none;
+  color: #fff;
+  padding: 4px 5px;
+  border-radius: 5px;
+  margin-top: 5px;
+  cursor: pointer;
 }
